force-app/main/default/objects/BLND_DFTE_Time__c/BLND_DFTE_Time__c.object-meta.xml
<CustomObject>
    <label>DreamTeam Time</label>
    <nameField>
        <label>Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DreamTeam Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>