force-app/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Billed_Flag__c.field-meta.xml
<CustomField>
    <fullName>BLND_Billed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billed Flag</label>
    <type>Checkbox</type>
</CustomField>