force-app/main/default/objects/BLND_DFTE_Time__c/fields/BLND_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>BLND_Case_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Link</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>R00N30000002PYioEAG</relationshipName>
    <type>Lookup</type>
</CustomField>